# fastapi_tortoise_app

./: LICENSE  README.md  pyproject.toml
fastapi_tortoise_app/: main.py  models.py
tests/: test_main.py
